--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <header>
         <div class="container-elementos-header">
-            <img src="logos/logo-desenvolve-simplificada.svg" alt="Logo Desenvolve simplificada.">
+            <img class="logo" src="logos/logo-desenvolve-simplificada.svg" alt="Logo Desenvolve simplificada.">
 
             <h1 class="titulo-principal">Trilhas [Desenvolve 2023]</h1>
 
@@ -105,13 +105,14 @@
         <img src="./logos/alura.svg" alt="">
     </div>
 
-    <img class="desenvolve" src="./logos/logo-desenvolve-detalhada.png" alt="">
+    <div class="mobile">
+        <img class="desenvolve" src="./logos/logo-desenvolve-detalhada.png" alt="">
 
-    <ul class="list2">
-        <li>Programa Desenvolve</li>
-        <li>Regulamento</li>
-    </ul>
-
+        <ul class="list2">
+            <li>Programa Desenvolve</li>
+            <li>Regulamento</li>
+        </ul>
+    </div>
     <div class="redes">
         <ul class="list3">
             <li><a href="#"><img src="./icones/instagram.svg" alt=""></a></li>
