--- a/index.html
+++ b/index.html
@@ -100,27 +100,31 @@
 
 <footer class="rodape">
 
-    <div class="list1">
-        <img src="./logos/logo-grupo-boticario.svg" alt="">
-        <img src="./logos/alura.svg" alt="">
-    </div>
+    <div class="rodape-container">
+        <div class="list1">
+            <img src="./logos/logo-grupo-boticario.svg" alt="">
+            <img src="./logos/alura.svg" alt="">
+        </div>
 
-    <div class="mobile">
-        <img class="desenvolve" src="./logos/logo-desenvolve-detalhada.png" alt="">
+        <div class="mobile">
+            <img class="desenvolve" src="./logos/logo-desenvolve-detalhada.png" alt="">
+            <img class="desenvolveSimples" src="./logos/logo-desenvolve-simplificada.svg" alt="">
 
-        <ul class="list2">
-            <li>Programa Desenvolve</li>
-            <li>Regulamento</li>
-        </ul>
-    </div>
-    <div class="redes">
-        <ul class="list3">
-            <li><a href="#"><img src="./icones/instagram.svg" alt=""></a></li>
-            <li><a href="#"><img src="./icones/facebook.svg" alt=""></a></li>
-            <li><a href="#"><img src="./icones/youtube.svg" alt=""></a></li>
-        </ul>
 
-        <p>Grupo Boticário</p>
+            <ul class="list2">
+                <li>Programa Desenvolve</li>
+                <li>Regulamento</li>
+            </ul>
+        </div>
+        <div class="redes">
+            <ul class="list3">
+                <li><a href="#"><img src="./icones/instagram.svg" alt=""></a></li>
+                <li><a href="#"><img src="./icones/facebook.svg" alt=""></a></li>
+                <li><a href="#"><img src="./icones/youtube.svg" alt=""></a></li>
+            </ul>
+
+            <p>Grupo Boticário</p>
+        </div>
     </div>
 </footer>
 
